# _mlinux_more

./: .gitignore  Makefile  Makefile.devel  Makefile.in  check-debian.sh  configure.ac
config/: binary  bootstrap  common
config/hooks/normal/: 9030-enable-services  9040-setup-vizex.hook.chroot  9045-setup-brew.hook.chroot.in  9050-setup-dotnet.hook.chroot  9050-setup-dotnet.hook.chroot.in  9050-setup-microsoft-packages.hook.chroot  9051-setup-dotnet.hook.chroot.in  9052-setup-pwsh.hook.chroot  9060-setup-busybox.hook.chroot  9999-cleanup-build-temp-res.hook.chroot  9999-tmpshell.hook.chroot
config/includes.chroot_after_packages/etc/: issue  os-release
config/includes.chroot_after_packages/etc/rc.d/: rc.local
config/includes.chroot_after_packages/etc/ssh/: ssh_config  sshd_config
config/includes.chroot_after_packages/usr/share/plymouth/: plymouthd.defaults
config/includes.chroot_after_packages/usr/share/plymouth/themes/emerald/: emerald.script
config/includes.chroot_after_packages/usr/share/plymouth/themes/mlinux/: mlinux.plymouth  mlinux.script
config/includes.chroot_before_packages/build-res/: busybox.config
config/package-lists/: cpp.list.chroot  cpputils.list.chroot  java.list.chroot  misc.list.chroot  python.list.chroot  shells.list.chroot  sysutils.list.chroot  utils.list.chroot  x11.list.chroot  ziputils.list.chroot
